--- a/communitree_app/communitree-brunch/package.json
+++ b/communitree_app/communitree-brunch/package.json
@@ -16,7 +16,8 @@
     "jquery": "^3.1.0",
     "leaflet": "^0.7.7",
     "leaflet-draw": "^0.3.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "js-cookie": "~2.1.0"
   },
   "devDependencies": {
     "brunch": "^2.0.0",
